--- a/expense_categorization.ipynb
+++ b/expense_categorization.ipynb
@@ -505,7 +505,7 @@
     }
    ],
    "source": [
-    "learn_finetune.save('120523-finetune')"
+    "learn_finetune.export('120523-finetune.pkl')"
    ]
   },
   {
@@ -813,12 +813,13 @@
     }
    ],
    "source": [
-    "learn_fit.save('120523-fit')"
+    "learn_fit.save('120523-fit')\n",
+    "learn_fit.export('120523-fit.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "id": "eb3a1cb6-0391-46de-8ff1-51f1bf9da5bb",
    "metadata": {},
    "outputs": [
@@ -868,7 +869,7 @@
        "         0.0631, 0.0669, 0.0679, 0.0675, 0.0728]))"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
